Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,3 +1,10 @@
 [project]
 [access "refs/for/refs/heads/*"]
 	pushMerge = group CAF Hardware Maintainers
+[access "refs/heads/*"]
+	create = group CAF Hardware Maintainers
+	push = +force group CAF Hardware Maintainers
+	pushMerge = group CAF Hardware Maintainers
+	label-Code-Review = -2..+2 group CAF Hardware Maintainers
+	label-Verified = -1..+1 group CAF Hardware Maintainers
+	submit = group CAF Hardware Maintainers
